{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 40,
  "lineage": "0da9f57f-2cf7-df6f-6833-e4cc24949cef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sscademy-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841043022779:internet-gateway/igw-09fcf30a6fbd9e427",
            "id": "igw-09fcf30a6fbd9e427",
            "owner_id": "841043022779",
            "tags": {
              "Name": "sscademy-IGW"
            },
            "tags_all": {
              "Name": "sscademy-IGW"
            },
            "vpc_id": "vpc-025ad07b27ef5691b"
          },
          "dependencies": [
            "aws_vpc.sscademy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sscademy-pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841043022779:route-table/rtb-04622db60214d9182",
            "id": "rtb-04622db60214d9182",
            "owner_id": "841043022779",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09fcf30a6fbd9e427",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sscademy-pub-RT"
            },
            "tags_all": {
              "Name": "sscademy-pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-025ad07b27ef5691b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sscademy-IGW",
            "aws_vpc.sscademy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sscademy-pub-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ec176f92e222fc4",
            "route_table_id": "rtb-04622db60214d9182",
            "subnet_id": "subnet-08f51bce0cb12ff63"
          },
          "dependencies": [
            "aws_internet_gateway.sscademy-IGW",
            "aws_route_table.sscademy-pub-RT",
            "aws_subnet.sscademy-pub-1",
            "aws_vpc.sscademy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sscademy-pub-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f454ad4e9c01c95",
            "route_table_id": "rtb-04622db60214d9182",
            "subnet_id": "subnet-0288ac8b03dceacb0"
          },
          "dependencies": [
            "aws_internet_gateway.sscademy-IGW",
            "aws_route_table.sscademy-pub-RT",
            "aws_subnet.sscademy-pub-2",
            "aws_vpc.sscademy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sscademy-pub-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095825266aa74d492",
            "route_table_id": "rtb-04622db60214d9182",
            "subnet_id": "subnet-07f2e8c94f9acb051"
          },
          "dependencies": [
            "aws_internet_gateway.sscademy-IGW",
            "aws_route_table.sscademy-pub-RT",
            "aws_subnet.sscademy-pub-3",
            "aws_vpc.sscademy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sscademy_stack_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841043022779:security-group/sg-087453ee57a9acb23",
            "description": "Sec Grp for sscademy ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087453ee57a9acb23",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.146.217.124/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sscademy-stack-sg",
            "name_prefix": "",
            "owner_id": "841043022779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "tags_all": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-025ad07b27ef5691b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sscademy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sscademy-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841043022779:subnet/subnet-0d3f8effa40f14f6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3f8effa40f14f6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "841043022779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sscademy-priv-1"
            },
            "tags_all": {
              "Name": "sscademy-priv-1"
            },
            "vpc_id": "vpc-025ad07b27ef5691b"
          },
          "dependencies": [
            "aws_vpc.sscademy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sscademy-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841043022779:subnet/subnet-076501b43ab06d974",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076501b43ab06d974",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "841043022779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sscademy-priv-2"
            },
            "tags_all": {
              "Name": "sscademy-priv-2"
            },
            "vpc_id": "vpc-025ad07b27ef5691b"
          },
          "dependencies": [
            "aws_vpc.sscademy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sscademy-priv-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841043022779:subnet/subnet-05cf39c4b8052bdff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cf39c4b8052bdff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "841043022779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sscademy-priv-3"
            },
            "tags_all": {
              "Name": "sscademy-priv-3"
            },
            "vpc_id": "vpc-025ad07b27ef5691b"
          },
          "dependencies": [
            "aws_vpc.sscademy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sscademy-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841043022779:subnet/subnet-08f51bce0cb12ff63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f51bce0cb12ff63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "841043022779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sscademy-pub-1"
            },
            "tags_all": {
              "Name": "sscademy-pub-1"
            },
            "vpc_id": "vpc-025ad07b27ef5691b"
          },
          "dependencies": [
            "aws_vpc.sscademy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sscademy-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841043022779:subnet/subnet-0288ac8b03dceacb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0288ac8b03dceacb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "841043022779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sscademy-pub-2"
            },
            "tags_all": {
              "Name": "sscademy-pub-2"
            },
            "vpc_id": "vpc-025ad07b27ef5691b"
          },
          "dependencies": [
            "aws_vpc.sscademy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sscademy-pub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841043022779:subnet/subnet-07f2e8c94f9acb051",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f2e8c94f9acb051",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "841043022779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sscademy-pub-3"
            },
            "tags_all": {
              "Name": "sscademy-pub-3"
            },
            "vpc_id": "vpc-025ad07b27ef5691b"
          },
          "dependencies": [
            "aws_vpc.sscademy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sscademy-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:841043022779:vpc/vpc-025ad07b27ef5691b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cad9dd5c4a6d1f4c",
            "default_route_table_id": "rtb-05a592f5b44c1f0dd",
            "default_security_group_id": "sg-097791e5e9408bf6a",
            "dhcp_options_id": "dopt-083eaa7b337a4d2e3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-025ad07b27ef5691b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05a592f5b44c1f0dd",
            "owner_id": "841043022779",
            "tags": {
              "Name": "sscademy-vpc"
            },
            "tags_all": {
              "Name": "sscademy-vpc"
            }
          }
        }
      ]
    }
  ]
}